# DTVM_CppSDK

./: .gitignore  CLA.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build_lib.sh  commitlint.config.js
.ci/: package.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: general-question.md
.github/workflows/: commit-lint.yml  dtvm_cpp_dev_docker_release.yml  dtvm_cpp_test.yml  nightly_release.yml  release.yml
contractlib/v1/: contractlib.cpp  contractlib.hpp  encoding.hpp  hostapi.h  hostio.hpp  math.hpp  storage.hpp  storage.inc.cpp  storage_slot.hpp  types.hpp  utils.hpp  wasi.hpp  wasi.inc.cpp
cpp_tests/: CMakeLists.txt  hostapi_mock.cpp  test_encoding.cpp  test_main.cpp  test_math.cpp  test_storage.cpp  utils.hpp
docker/: Dockerfile  docker_build.sh
docs/: COMMIT_CONVENTION.md  VERSIONING.md  readme.md  tutorial.md  usage.md
docs/advanced_features/: contract_interaction.md  contract_interfaces.md  solidity_integration.md
docs/basic_concepts/: constructors.md  events.md  storage.md  types.md
docs/best_practices/: coding_standards.md
docs/getting_started/: installation.md  quick_start.md
examples/c_erc20/: .gitignore  build.sh  erc20_c.c  hostapi.h  test.sh
examples/erc20/: .gitignore  build_wasm.sh  build_wasm_steps.sh  my_erc20.cpp  test_in_mock_cli.sh
examples/example1/: .gitignore  CMakeLists.txt  build_wasm.sh  build_wasm_steps.sh  (+3 more)
solidcpp/: Cargo.toml  test_example1_fetch_sol_from_cpp.sh  test_example1_fetch_sol_json.sh  test_example1_generate_hpp.sh
tools/: format.sh
(+17 files in other folders)
